--- a/lscyane.Core/lscyane.Core.csproj
+++ b/lscyane.Core/lscyane.Core.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.9" />
   </ItemGroup>
 
 </Project>
